--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Makerlab - Brandeis Univeristy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/html5up.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Chivo:400,900" rel="stylesheet">
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
-		<!-- Sidebar -->
+		<!-- Links in the sidebar -->
 			<section id="sidebar">
 				<div class="inner sidebar-big">
 					<nav>
@@ -27,20 +19,18 @@
                             <li><a href="resources.html">Resources</a></li>
                             <li><a href="workspaces.html">Workspaces</a></li>
                             <li><a href="training.html">Training</a></li>
-                            <li><a href="people.html">People and Clubs</a></li>
+                            <li><a href="people.html">People and Groups</a></li>
                             <li><a href="blog.html">Blog</a></li>
 						</ul>
 					</nav>
 				</div>
 			</section>
 
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Intro -->
+				<!-- Landing page - front page -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Brandeis University MakerLab</h1>
+							<h1>MakerLab</h1>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis.</p>
                             <div class="mini">
                                 <div class="content">
@@ -49,7 +39,7 @@
 						</div>
 					</section>
 
-				<!-- What we do -->
+				<!-- What we do section -->
 					<section id="activities" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -144,14 +134,11 @@
 				</div>
 			</footer>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
