--- a/people.html
+++ b/people.html
@@ -9,55 +9,80 @@
 		<title>People - Makerlab - Brandeis Univeristy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/html5up.css" />
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link href="https://fonts.googleapis.com/css?family=Chivo:400,900" rel="stylesheet">
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Brandeis University MakerLab</a>
+				<a href="index.html" class="title">MakerLab</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="resources.html">Resources</a></li>
 						<li><a href="workspaces.html">Workspaces</a></li>
 						<li><a href="training.html">Training</a></li>
-						<li><a href="people.html">People and Clubs</a></li>
+						<li><a href="people.html">People and Groups</a></li>
 						<li><a href="blog.html">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
 
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Main -->
+				<!-- Main content area -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- clubs -->
 							<h1 class="major">Clubs</h1>
 							<div class="club">
 								<h2>Deis 3D</h2>
+								<p>Information about the club</p>
 								<h3>Club Leaders</h3>
+								<ul>
+									<li>List</li>
+									<li>of</li>
+									<li>board</li>
+									<li>members</li>
+								</ul>
 							</div>
 							<div class="club">
 								<h2>BITMAP</h2>
+								<p>Information about the club</p>
 								<h3>Club Leaders</h3>
+								<ul>
+									<li>List</li>
+									<li>of</li>
+									<li>board</li>
+									<li>members</li>
+								</ul>
 							</div>
 							<div class="club">
 								<h2>Virtual Reality Club</h2>
+								<p>Information about the club</p>
 								<h3>Club Leaders</h3>
+								<ul>
+									<li>List</li>
+									<li>of</li>
+									<li>board</li>
+									<li>members</li>
+								</ul>
 							</div>
 							<div class="club">
 								<h2>Prosthetics Club</h2>
+								<p>Information about the club</p>
 								<h3>Club Leaders</h3>
+								<ul>
+									<li>List</li>
+									<li>of</li>
+									<li>board</li>
+									<li>members</li>
+								</ul>
 							</div>
 						</div>
 
+						<!-- staff and student workers with title and email address -->
 						<div class="inner">
 							<h1 class="major">People</h1>
 							<h2>Staff</h2>
@@ -177,7 +202,6 @@
 							</div>
 						</div>
 					</section>
-
 			</div>
 
 			<!-- Footer -->
@@ -193,13 +217,11 @@
 					</div>
 				</footer>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
