--- a/training.html
+++ b/training.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Training - Makerlab - Brandeis Univeristy</title>
@@ -20,23 +15,21 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Brandeis University MakerLab</a>
+				<a href="index.html" class="title">MakerLab</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="resources.html">Resources</a></li>
 						<li><a href="workspaces.html">Workspaces</a></li>
 						<li><a href="training.html">Training</a></li>
-						<li><a href="people.html">People and Clubs</a></li>
+						<li><a href="people.html">People and Groups</a></li>
 						<li><a href="blog.html">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
 
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Main -->
+				<!-- Main content area -->
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Training</h1>
@@ -44,7 +37,6 @@
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 						</div>
 					</section>
-
 			</div>
 
 			<!-- Footer -->
@@ -60,14 +52,11 @@
 					</div>
 				</footer>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
