--- a/makerlab-website/index.html
+++ b/makerlab-website/index.html
@@ -1,22 +1,22 @@
 ---
 layout: default
-title: "Brandeis University MakerLab"
+title: ""
 ---
 <!-- Landing page - front page -->
-<section id="intro" class="wrapper style1 fullscreen fade-up">
-	<div class="inner">
-		<h1>MakerLab</h1>
-		<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis.</p>
-        <div class="mini">
-            <div class="content">
-            </div>
-        </div>
-	</div>
-</section>
+<div class="wrapper">
+	<section id="intro">
+		<div id="makerlab-text">
+			<h1>MakerLab</h1>
+		</div>
+			<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis.</p>
+	        <div class="mini">
+	            <div class="content">
+	            </div>
+	        </div>
+	</section>
 
-<!-- What we do section -->
-<section id="activities" class="wrapper style3 fade-up">
-	<div class="inner">
+	<!-- What we do section -->
+	<section id="activities">
 		<h2>What we do</h2>
 		<p>Supporting educational, social and technological innovation, the Brandeis MakerLab is oriented around a vision of social justice designed to support makers who mend. We collaborate on computing projects to develop new forms of culture and craft in a community-centered setting.</p>
 		<div class="features">
@@ -41,20 +41,21 @@ title: "Brandeis University MakerLab"
 				<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 			</section>
 		</div>
-	</div>
-</section>
+	</section>
+</div>
 
 <!-- Featured projects -->
-<section id="projects" class="wrapper style2 spotlights">
-    <div class="inner">
-        <h2>Featured Projects</h2>
-    </div>
+<section id="projects" class="spotlights">
+	<div class="indented-title">
+	    <h2>Featured Projects</h2>
+	</div>
     <section>
 		<a href="#" class="image"><img src="images/graybiel.jpg" alt="" data-position="center center" /></a>
 		<div class="content">
 			<div class="inner">
 				<h2>Graybiel Lab</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -63,7 +64,8 @@ title: "Brandeis University MakerLab"
 		<div class="content">
 			<div class="inner">
 				<h2>Molecules of Life</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -72,7 +74,8 @@ title: "Brandeis University MakerLab"
 		<div class="content">
 			<div class="inner">
 				<h2>House of the Vetii</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -81,7 +84,8 @@ title: "Brandeis University MakerLab"
 		<div class="content">
 			<div class="inner">
 				<h2>Louise Nevelson Exhibition</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -90,8 +94,8 @@ title: "Brandeis University MakerLab"
 		<div class="content">
 			<div class="inner">
 				<h2>Brandeis Prosthetics Club</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.
+				</p>
 			</div>
-		</div>
 	</section>
 </section>
