--- a/people/index.html
+++ b/people/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title:  "People and Clubs"
+title:  "People and Groups"
 ---
 <!-- clubs -->
 <div class="half-big-first">
@@ -52,16 +52,53 @@ title:  "People and Clubs"
 </div>
 
 <div class="half-big">
-    <h1 class="major">People</h1>
+    <h1 class="major">Staff</h1>
     <!-- staff and student workers with title and email address -->
-    <h2>Staff</h2>
-        <h3>Ian Roy</h3>
-        <h4>Assistant Director for Research Technology and Innovation
+    <div class="SOFIYAS-BOX">
+        <h2>Ian Roy</h2>
+        <h4>
+            Assistant Director for Research Technology and Innovation
+            <br>
+            Head of Brandeis MakerLab
+            <br>
+            Staff Advisor to 3D Printing Club, Deis3D.org
+            <br>
+            Hardware Advisor to BITMAP
+            <br>
+            Class of '05
+            <br>
+            ianroy@brandeis.edu
+            <br>
+            (781) 736-4608
+            <br>
+            Instagram: https://www.instagram.com/ianiscray_/
+            <br>
+            Twitter: @ianiscray
+        </h4>
+    </div>
+    <div class="SOFIYAS-BOX">
+        <h2>Hazal Uzunkaya</h2>
+        <h4>Brandeis University LTS
         </h4>
         <h4>
-            Founding Head of Brandeis MakerLab
+            Research Technology Specialist
         </h4>
         <h4>
-            ianroy@brandeis.edu</h4>
+            Service Coordinator of Brandeis MakerLab
         </h4>
+        <h4>
+            hazalu@brandeis.edu
+        </h4>
+    </div>
+    <div class="SOFIYAS-BOX">
+        <h2>Tim Hebert</h2>
+        <h4>Media Technology Systems Administrator, Media Technology Services
+        </h4>
+        <h4>
+            Embedded Systems Consultant, Brandeis MakerLab
+        </h4>
+        <h4>
+            (781)736-4603
+        </h4>
+    </div>
 </div>
