Done with Monday

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ title: ""
 	<!-- What we do section -->
 	<section id="activities">
 		<h2>What we do</h2>
-		<p>Our model supports four equipment categories: <b>1.)</b> tools that physicalize the digital world (3D printers, laser cutters, CNC), <b>2.)</b> tools that digitize the real world (3D scanning, computer vision), <b>3.)</b> hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments), and <b>4.)</b> hardware and software for prototyping embedded systems and robotics.
+		<p>Our model supports four equipment categories: <b>1)</b> tools that physicalize the digital world (3D printers, laser cutters, CNC), <b>2)</b> tools that digitize the real world (3D scanning, computer vision), <b>3)</b> hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments), and <b>4)</b> hardware and software for prototyping embedded systems and robotics.
 		</p>
 		<div class="features">
 			<section>
 				<span class="icon major fa-code"></span>
 				<h3>Teaching & Learning</h3>
-				<p>Weekly trainings and workshops on emerging technology.</p>
+				<p>Lectures in emerging technology, weekly trainings, and workshops.</p>
 			</section>
 			<section>
 				<span class="icon major fa-lock"></span>
@@ -53,7 +53,7 @@ title: ""
 	</div>
 	<div class="spotlights">
     <section>
-		<a href="#" class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></a>
+		<div class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
 		<div class="content">
 			<div class="inner">
 				<h2>Graybiel Lab</h2>
@@ -64,7 +64,7 @@ title: ""
 		</div>
 	</section>
 	<section>
-		<a href="#" class="image" style="background-image: url('/assets/images/molecules.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></a>
+		<div class="image" style="background-image: url('/assets/images/molecules.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
 		<div class="content">
 			<div class="inner">
 				<h2>Molecules of Life</h2>
@@ -75,7 +75,7 @@ title: ""
 		</div>
 	</section>
 	<section>
-		<a href="#" class="image" style="background-image: url('/assets/images/vetii.png');background-position: 50% 50%;" alt="" data-position="center center"/></a>
+		<div class="image" style="background-image: url('/assets/images/vetii.png');background-position: 50% 50%;" alt="" data-position="center center"/></div>
 		<div class="content">
 			<div class="inner">
 				<h2>House of the Vetii</h2>
@@ -85,7 +85,7 @@ title: ""
 		</div>
 	</section>
     <section>
-		<a href="#" class="image" style="background-image: url('/assets/images/nevelson.png');background-position: 50% 50%;" alt="" data-position="center center"/></a>
+		<div class="image" style="background-image: url('/assets/images/nevelson.png');background-position: 50% 50%;" alt="" data-position="center center"/></div>
 		<div class="content">
 			<div class="inner">
 				<h2>Louise Nevelson Exhibition</h2>
@@ -95,7 +95,7 @@ title: ""
 		</div>
 	</section>
     <section>
-		<a href="#" class="image" style="background-image: url('/assets/images/prosthetics.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></a>
+		<div class="image" style="background-image: url('/assets/images/prosthetics.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
 		<div class="content">
 			<div class="inner">
 				<h2>Brandeis Prosthetics Club</h2>
