SHUT UP ITS FINE

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@ title: ""
 	<!-- What we do section -->
 	<section id="activities">
 		<h2>What we do</h2>
-		<p>Our model supports four equipment categories: <b>1)</b> tools that physicalize the digital world (3D printers, laser cutters, CNC), <b>2)</b> tools that digitize the real world (3D scanning, computer vision), <b>3)</b> hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments), and <b>4)</b> hardware and software for prototyping embedded systems and robotics.
+		<p>Our model supports four equipment categories:
+			<br>
+			<b>1)</b> tools that physicalize the digital world (3D printers, laser cutters, CNC)
+			<br>
+			<b>2)</b> tools that digitize the real world (3D scanning, computer vision)
+			<br>
+			<b>3)</b> hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments)
+			<br>
+			<b>4)</b> hardware and software for prototyping embedded systems and robotics
 		</p>
 		<div class="features">
 			<section>
