--- a/index.html
+++ b/index.html
@@ -18,36 +18,46 @@ title: ""
 	<!-- What we do section -->
 	<section id="activities">
 		<h2>What we do</h2>
-		<p>Our model supports four equipment categories:
-			<br>
-			<b>1)</b> tools that physicalize the digital world (3D printers, laser cutters, CNC)
-			<br>
-			<b>2)</b> tools that digitize the real world (3D scanning, computer vision)
-			<br>
-			<b>3)</b> hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments)
-			<br>
-			<b>4)</b> hardware and software for prototyping embedded systems and robotics
-		</p>
 		<div class="features">
 			<section>
-				<span class="icon major fa-code"></span>
+				<span class="icon major fa-gear"></span>
 				<h3>Teaching & Learning</h3>
-				<p>Lectures in emerging technology, weekly trainings, and workshops.</p>
+				<p>Curricular lectures in emerging technology, <a href="/training">weekly trainings</a>, and <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">workshops</a>.</p>
 			</section>
 			<section>
-				<span class="icon major fa-lock"></span>
+				<span class="icon major fa-mortar-board"></span>
 				<h3>Research Technology</h3>
-				<p>Hardware and software support for instrument machines, prototyping, and research workflows.</p>
+				<p>Prototyping physical objects and new workflows, digitization, and digital fabrication.</p>
 			</section>
 			<section>
-				<span class="icon major fa-cog"></span>
+				<span class="icon major fa-calendar"></span>
 				<h3>Hackathons & Events</h3>
-				<p>24 hour programming and prototyping challenges, speaker series, and sponsored Maker in Residence projects.</p>
+				<p>24 hour programming challenges and prototyping challenges, <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">speaker series</a>, and sponsored maker in residence projects.</p>
+			</section>
+			<section>
+				<span class="icon major fa-child"></span>
+				<h3>Outreach</h3>
+				<p>Talks, tours, and building community.</p>
 			</section>
 			<section>
 				<span class="icon major fa-desktop"></span>
-				<h3>Outreach</h3>
-				<p>Talks, tours, and building community.</p>
+				<h3>?</h3>
+				<p>Tools that physicalize the digital world (3D printers, laser cutters, CNC).</p>
+			</section>
+			<section>
+				<span class="icon major fa-desktop"></span>
+				<h3>?</h3>
+				<p>Tools that digitize the real world (3D scanning, computer vision).</p>
+			</section>
+			<section>
+				<span class="icon major fa-desktop"></span>
+				<h3>?</h3>
+				<p>Hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments).</p>
+			</section>
+			<section>
+				<span class="icon major fa-desktop"></span>
+				<h3>?</h3>
+				<p>Hardware and software for prototyping embedded systems and robotics.</p>
 			</section>
 		</div>
 	</section>
