Cleaning up styling

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@ title: ""
 		<hr>
 		<div class="features">
 			<section>
-				<span class="icon major fa-desktop"></span>
+				<span class="icon major fa-print"></span>
 				<h3>Digital Fabrication</h3>
 				<p>Tools that physicalize the digital world (3D printers, laser cutters, CNC).</p>
 			</section>
 			<section>
-				<span class="icon major fa-desktop"></span>
+				<span class="icon major fa-cube"></span>
 				<h3>Digitization and 3D Scanning</h3>
 				<p>Tools that digitize the real world (3D scanning, computer vision).</p>
 			</section>
 			<section>
-				<span class="icon major fa-desktop"></span>
+				<span class="icon major fa-eye"></span>
 				<h3>Virtual and Augmented Reality</h3>
 				<p>Hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments).</p>
 			</section>
 			<section>
-				<span class="icon major fa-desktop"></span>
+				<span class="icon major fa-plug"></span>
 				<h3>Embedded Systems</h3>
 				<p>Hardware and software for prototyping embedded systems and robotics.</p>
 			</section>
@@ -71,6 +71,66 @@ title: ""
 <section id="projects">
 	<div class="indented-title">
 	    <h2>Featured Projects</h2>
+	</div>
+	<div class="spotlights">
+    <section>
+		<div class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+		<div class="content">
+			<div class="inner">
+				<h2>Graybiel Lab</h2>
+				<p>"In my dissertation research I am studying how people maintain balance, and the role that the vision, the inner ear's balance organ, and gravity plays in that. We took some data from one of our experiments, and turned that into a 3d printed sculpture that represents that data in such a way that you can gain a different understanding from it, compared to "just" looking at a 2d graph on a screen. This was a collaboration with Vivekanand Pandey Vimal (who provided the data) and Alberto Pierobon (who helped with designing the stand) with a tremendous amount of support from Brandeis University LTS Maker Lab (Ian Roy, Hazal H Uzunkaya, Ben Levin) and Brandeis 3D Printing Club - Deis3D (Gabe Seltzer). " - Sacha Panic
+
+				</p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="image" style="background-image: url('/assets/images/molecules.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+		<div class="content">
+			<div class="inner">
+				<h2>Molecules of Life</h2>
+				<p>This summer we had six Waltham High School students participate in a program (designed by Vivekanand Pandey Vimal, Professor Krummel, Anique Olivier-Mason and Eduardo Beltrame), where they learned about Biochemistry and DNA, with 3D printed molecules to help them visualize. You can read more about this program at Brandeis Library and Technology Services' blog.
+
+				</p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="image" style="background-image: url('/assets/images/vetii.png');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+		<div class="content">
+			<div class="inner">
+				<h2>House of the Vetii</h2>
+				<p>"The house is two-scale, as it was in Rome, you can walk around and meet virtual people — shopkeepers, even people playing chess on the steps of the Roman Basilica. It’s really quite amazing and fascinating, the technology we have today."-Priyam Shah
+				</p>
+			</div>
+		</div>
+	</section>
+    <section>
+		<div class="image" style="background-image: url('/assets/images/nevelson.png');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+		<div class="content">
+			<div class="inner">
+				<h2>Louise Nevelson Exhibition</h2>
+				<p>Daniela Dimitrova, one of our valuable MakerLab family members and a Rose Art Museum intern, has created this exhibition in virtual reality. Now you can put on your augmented reality headset to take a tour. Thank you Rose Art Museum for sharing this picture with the caption "Deputy Director Kristin Parker tests out the Oculus Rift ..."
+				</p>
+			</div>
+		</div>
+	</section>
+    <section>
+		<div class="image" style="background-image: url('/assets/images/prosthetics.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+		<div class="content">
+			<div class="inner">
+				<h2>Brandeis Prosthetics Club</h2>
+				<p>A group of Brandeis students have started this club in order to understand and develop prostheses. The Prosthetics in the market can cost up to $50,000, by 3D printing we can reduce this price to $50. Now kids don't have to wait until they stop growing to get one, and this is very important in their neuro-muscular development. Right now the club members are trying to master the designs found in the e-NABLE community's website. Once they get certified they will put their first prosthetic hand on a kid. While they work on their 3D printing and design skills, they are also hoping to start strong relations with Boston Children's Hospital to help the children in need.
+
+				</p>
+			</div>
+	</section>
+</section>
+
+
+<section id="makers-in-residence">
+	<div class="indented-title">
+	    <h2>Maker in Residence Projects</h2>
 	</div>
 	<div class="spotlights">
     <section>
