--- a/training/index.html
+++ b/training/index.html
@@ -2,14 +2,15 @@
 layout: page
 title:  "Training"
 ---
-<h3>How To Get Access</h3>
-<p>To gain swipe access into the Brandeis MakerLab, we ask that you attend one of our weekly training workshops in 3D Printing, 3D Scanning, or Embeded Systems and Soldering.</p>
-
-<p>To attend a trainings, email makerlab@brandeis.edu at least 24 hours before the training begins to reserve a spot. Please show up on time as we need the full 2 hours to cover all the topics! If you can't make any of the specified training times, email us and we'll schedule something that works for you.</p>
-
-
 <div class="pure-g">
-    <div class="pure-u-1 pure-u-md-1-2 offset-md-1-4">
+    <div class="pure-u-lg-1-2 pure-u-md-1 pure-u-1">
+        <h2>How To Get Access</h2>
+        <p>To gain swipe access into the Brandeis MakerLab, we ask that you attend one of our weekly training workshops in 3D Printing, 3D Scanning, or Embeded Systems and Soldering.</p>
+
+        <p>To attend a trainings, email makerlab@brandeis.edu at least 24 hours before the training begins to reserve a spot. Please show up on time as we need the full 2 hours to cover all the topics! If you can't make any of the specified training times, email us and we'll schedule something that works for you.</p>
+    </div>
+    <div class="pure-u-lg-1-2 pure-u-md-1 pure-u-1">
+        <h2>Schedule</h2>
         <table>
             <tr>
                 <th>Topic</th>
