--- a/people/index.html
+++ b/people/index.html
@@ -5,26 +5,21 @@ title:  "People and Groups"
 <!-- clubs -->
 <div class="pure-g">
     <div class="pure-u-1">
-        <h1 class="major">Staff</h1>
-        <!-- staff and student workers with title and email address -->
+        <h2>Staff</h2>
+    </div>
+</div>
+<div class="pure-g">
+    <div class="pure-u-1-3">
         <div class="SOFIYAS-BOX">
-            <h2>Ian Roy</h2>
-            <h4>
+            <h3>Ian Roy</h3>
+            <p>
                 Assistant Director for Research Technology and Innovation
-            </h4>
-            <h4>
                 Head of Brandeis MakerLab
-            </h4>
-            <h4>
                 Staff Advisor to 3D Printing Club, Deis3D.org
-            </h4>
-            <h4>
                 Hardware Advisor to BITMAP
-            </h4>
-            <h4>
                 Class of '05
-            </h4>
-            <h3>Contact</h3>
+            </p>
+            <h4>Contact</h4>
                 <ul>
                     <li>
                         <a href="mailto:ianroy@brandeis.edu">Email</a>
@@ -40,17 +35,15 @@ title:  "People and Groups"
                     </li>
                 </ul>
         </div>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-3">
         <div class="SOFIYAS-BOX">
-            <h2>Hazal Uzunkaya</h2>
-            <h4>Brandeis University LTS
-            </h4>
-            <h4>
+            <h3>Hazal Uzunkaya</h3>
+            <p>Brandeis University LTS
                 Research Technology Specialist
-            </h4>
-            <h4>
                 Service Coordinator of Brandeis MakerLab
-            </h4>
-            <h3>Contact</h3>
+            </p>
+            <h4>Contact</h4>
                 <ul>
                     <li>
                         <a href="mailto:hazalu@brandeis.edu">Email</a>
@@ -58,14 +51,14 @@ title:  "People and Groups"
                 </ul>
             </h4>
         </div>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-3">
         <div class="SOFIYAS-BOX">
-            <h2>Tim Hebert</h2>
-            <h4>Media Technology Systems Administrator, Media Technology Services
-            </h4>
-            <h4>
+            <h3>Tim Hebert</h3>
+            <p>Media Technology Systems Administrator, Media Technology Services
                 Embedded Systems Consultant, Brandeis MakerLab
-            </h4>
-            <h3>Contact</h3>
+            </p>
+            <h4>Contact</h4>
                 <ul>
                     <li>
                         <a href="mailto:thebert@brandeis.edu">Email</a>
@@ -76,70 +69,92 @@ title:  "People and Groups"
                 </ul>
         </div>
     </div>
+</div>
 
+<hr>
+
+<div class="pure-g">
     <div class="pure-u-1">
-        <h1 class="major">Clubs</h1>
+        <h2>Clubs</h2>
+    </div>
+</div>
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-lg-1-2">
         <div class="SOFIYAS-BOX">
-            <h2>BITMAP</h2>
+            <h3>BITMAP</h3>
                 <p>The original Brandeis umbrella technology club - Brandeis Initiative for Technology, Machines, Apps, and Programming - and organizers of Codestellation, Brandeis' biggest software and hardware hackathon.</p>
-            <h3>Links</h3>
+            <h4>Links</h4>
                 <ul>
                     <li><a href="https://www.facebook.com/groups/429460677107670/">Facebook group</a></li>
                     <li><a href="http://codestellation.io">Codestellation (hackathon) website</a></li>
                     <li><a href="https://twitter.com/Codestellation">Codestellation twitter</a></li>
                 </ul>
-            <h3>Contact Info</h3>
+            <h4>Contact Info</h4>
                 <ul>
                     <li><a href="mailto:taliem@brandeis.edu">Talie</li>
                 </ul>
         </div>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-2">
         <div class="SOFIYAS-BOX">
-            <h2>Deis 3D</h2>
+            <h3>Deis 3D</h3>
                 <p>Brandeis 3D Printing Club</p>
-            <h3>Links</h3>
+            <h4>Links</h4>
                 <ul>
                     <li><a href="deis3d.org">Website</a></li>
                     <li><a href="https://www.facebook.com/deis3d">Facebook page</a></li>
                     <li><a href="http://printathon.org/">Printathon website</a></li>
                 </ul>
-            <h3>Contact</h3>
+            <h4>Contact</h4>
                 <ul>
                     <li><a href="mailto:gabeseltzer@gmail.com">Gabe</a></li>
                 </ul>
         </div>
+    </div>
+</div>
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-lg-1-2">
         <div class="SOFIYAS-BOX">
-            <h2>Virtual Reality Club</h2>
+            <h3>Virtual Reality Club</h3>
                 <p>AR/VR development group</p>
-            <h3>Contact</h3>
+            <h4>Contact</h4>
                 <ul>
                     <li><a href="mailto:mikemakivic@gmail.com">Mike</a></li>
                 </ul>
         </div>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-2">
         <div class="SOFIYAS-BOX">
-            <h2>Prosthetics Club</h2>
+            <h3>Prosthetics Club</h3>
                 <p>Student group that makes prosthetic limbs, currently working on e-NABLE</p>
-            <h3>Contact Info</h3>
+            <h4>Contact Info</h4>
                 <ul>
                     <li><a href="mailto:dlandesm@brandeis.edu">David</a></li>
                 </ul>
         </div>
     </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
     <div class="pure-u-1">
-        <h1 class="major">Makers in Residence</h1>
-        <!-- staff and student workers with title and email address -->
-        <div class="SOFIYAS-BOX">
-        </div>
+        <h3>Makers in Residence</h3>
     </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
     <div class="pure-u-1">
-        <h1 class="major">Community of Practice</h1>
-        <!-- staff and student workers with title and email address -->
-        <div class="SOFIYAS-BOX">
-        </div>
+        <h3>Community of Practice</h3>
     </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
     <div class="pure-u-1">
-        <h1 class="major">Research Groups</h1>
-        <!-- staff and student workers with title and email address -->
-        <div class="SOFIYAS-BOX">
-        </div>
+        <h3>Research Groups</h3>
     </div>
 </div>
