--- a/resources/index.html
+++ b/resources/index.html
@@ -2,10 +2,12 @@
 layout: page
 title:  "Resources"
 ---
-<div class="half-big-first">
-    <h1 class="major">3D Printers</h1>
-    <div class="SOFIYAS-BOX">
-        <h2>LTS Owned</h2>
+<div class="pure-g">
+    <div class="pure-u-1">
+        <h2>3D Printers</h2>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h3>LTS Owned</h3>
         <ul>
             <li>Creator X x 4 (Mr. Orange, Mr. Green, Mr. Moustache)</li>
             <li>Monoprice 3D Pro (Mr. Red)</li>
@@ -22,7 +24,9 @@ title:  "Resources"
             <li>Monoprice 3D mini x 6 (loaners)</li>
             <li>SeeMeCNC - ERIS delta</li>
         </ul>
-        <h2>Deis3D Owned</h2>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h3>Deis3D Owned</h3>
         <ul>
             <li>MakerBot Rep2 x 11 (Aleph and Omega + 9 from Yale)</li>
             <li>Makerbot Rep2x</li>
@@ -46,25 +50,20 @@ title:  "Resources"
             <li>WASP 20x40 Turbo</li>
             <li>WITBOX</li>
         </ul>
-        <h2>Community Printers</h2>
+    </div>
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h3>Community Printers</h3>
         <ul>
             <li>Z-corp 250 (BinderJet 64 color)</li>
         </ul>
     </div>
-    <h1 class="major">3D Scanning</h1>
-    <div class="SOFIYAS-BOX">
-        <ul>
-            <li>Xbox 360 Kinect x 2</li>
-            <li>Xbox One Kinect x 4</li>
-            <li>Next Engine Desktop 3D Scanner</li>
-            <li>David 3D Scanner</li>
-        </ul>
-    </div>
 </div>
 
-<div class="half-big">
-    <h1 class="major">Circuits</h1>
-    <div class="SOFIYAS-BOX">
+<hr>
+
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h2>Circuits</h2>
         <ul>
             <li>4x Soldering kits</li>
             <li>adjustable iron</li>
@@ -83,8 +82,15 @@ title:  "Resources"
             <li>kimwipes, alcohol, acid brushes</li>
         </ul>
     </div>
-    <h1 class="major">Embedded Systems</h1>
-    <div class="SOFIYAS-BOX">
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h2>3D Scanning</h2>
+        <ul>
+            <li>Xbox 360 Kinect x 2</li>
+            <li>Xbox One Kinect x 4</li>
+            <li>Next Engine Desktop 3D Scanner</li>
+            <li>David 3D Scanner</li>
+        </ul>
+        <h2>Embedded Systems</h2>
         <ul>
             <li>Raspberry Pi 2 B+ x 4</li>
             <li>Raspbery Pi B+ x 2</li>
@@ -98,8 +104,8 @@ title:  "Resources"
             <li>Many many sensors and shields</li>
         </ul>
     </div>
-    <h1 class="major">Virtual Reality</h1>
-    <div class="SOFIYAS-BOX">
+    <div class="pure-u-1 pure-u-lg-1-3">
+        <h2>Virtual Reality</h2>
         <ul>
             <li>Custom Built watercooled high end PC (6-corei7/32GB/Geforce 990TI)</li>
             <li>3x custom PCs in Farber Innovation Classroom</li>
@@ -109,9 +115,7 @@ title:  "Resources"
             <li>Muse Headband x 3</li>
             <li>Myo Gesture Armband</li>
         </ul>
-    </div>
-    <h1 class="major">Other Hardware</h1>
-    <div class="SOFIYAS-BOX">
+        <h2>Other Hardware</h2>
         <ul>
             <li>27" iMac (Corei7 / 16GB)</li>
             <li>24" all-in-one Dell (Corei7 / 16GB) x 2</li>
