--- a/training/index.html
+++ b/training/index.html
@@ -7,7 +7,7 @@ title:  "Training"
         <h2>How To Get Access</h2>
         <p>To gain swipe access into the Brandeis MakerLab, we ask that you attend one of our weekly training workshops in 3D Printing, 3D Scanning, or Embeded Systems and Soldering.</p>
 
-        <p>To attend a trainings, email makerlab@brandeis.edu at least 24 hours before the training begins to reserve a spot. Please show up on time as we need the full 2 hours to cover all the topics! If you can't make any of the specified training times, email us and we'll schedule something that works for you.</p>
+        <p>To attend a training, sign up on calendly at least 24 hours before the training begins to reserve a spot. Please show up on time as we need the full 2 hours to cover all the topics! If you can't make any of the specified training times, email us and we'll schedule something that works for you.</p>
     </div>
     <div class="pure-u-lg-1-2 pure-u-md-1 pure-u-1">
         <h2>Schedule</h2>
@@ -15,18 +15,34 @@ title:  "Training"
             <tr>
                 <th>Topic</th>
                 <th>Time</th>
+                <th>  </th>
             </tr>
             <tr>
                 <td>Intro to 3D printing</td>
                 <td>Friday from 10am-12pm</td>
+                <td>
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/printing">
+                        <input TYPE="submit" value="Sign up">
+                    </form>
+                </td>
             </tr>
             <tr>
                 <td>Intro to 3D scanning</td>
                 <td>Thursday from 3pm-5pm</td>
+                <td>
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/scanning">
+                        <input TYPE="submit" value="Sign up">
+                    </form>
+                </td>
             </tr>
             <tr>
                 <td>Soldering training</td>
                 <td>Monday from 2pm-4pm</td>
+                <td>
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/soldering">
+                        <input TYPE="submit" value="Sign up">
+                    </form>
+                </td>
             </tr>
         </table>
     </div>
