--- a/workspaces/index.html
+++ b/workspaces/index.html
@@ -10,7 +10,21 @@ title:  "Workspaces"
 <div class="pure-g">
     <div class="pure-u-1 pure-u-lg-1-2">
         <div id="makerlabCarousel">
-            <div><center><img src="/assets/images/makerlab.jpg" class="pure-img"/></center></div>
+            <div>
+                <img src="/assets/images/makerlab.jpg" class="pure-img"/>
+            </div>
+            <div>
+                <img src="/assets/images/makerlab1.png" class="pure-img"/>
+            </div>
+            <div>
+                <img src="/assets/images/makerlab2.png" class="pure-img"/>
+            </div>
+            <div>
+                <img src="/assets/images/makerlab3.png" class="pure-img"/>
+            </div>
+            <div>
+                <img src="/assets/images/makerlab4.png" class="pure-img"/>
+            </div>
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
