Anne's changes, Friday

--- a/people/index.html
+++ b/people/index.html
@@ -91,7 +91,7 @@ title:  "People and Groups"
                 </ul>
             <h4>Contact Info</h4>
                 <ul>
-                    <li><a href="mailto:taliem@brandeis.edu">Talie</li>
+                    <li><a href="mailto:taliem@brandeis.edu">Talie</a></li>
                 </ul>
         </div>
     </div>
