--- a/resources/index.html
+++ b/resources/index.html
@@ -3,58 +3,54 @@ layout: page
 title:  "Resources"
 ---
 <div class="pure-g">
-    <div class="pure-u-1">
-        <h2>3D Printers</h2>
+    <div class="pure-u-1-4">
+        <h2 class="resources-title" id="fabrication">3D Printers</h2>
     </div>
-    <div class="pure-u-1 pure-u-lg-1-3">
+    <div class="pure-u-1 pure-u-lg-1-3 border-left">
         <h3>LTS Owned</h3>
         <ul>
-            <li>Creator X x 4 (Mr. Orange, Mr. Green, Mr. Moustache)</li>
-            <li>Monoprice 3D Pro (Mr. Red)</li>
-            <li>PowerSpeck 3D Pro (Mr. GooglyEyes)</li>
-            <li>Dremel 3D Pro (student donated)</li>
-            <li>mUVe 1 SLA (assembled by donated staff time)</li>
-            <li>mUVe 1 DLP (unbuilt)</li>
-            <li>FormLabs Form1 SLA</li>
-            <li>DeezMaker Bukito (6-pound portable mini printer)</li>
-            <li>Printrbot (with Paste-extruder food printing modification)</li>
-            <li>3x M3D mini 3D printer (Blue, Green, Orange)</li>
-            <li>Wanhao Prusia i3 (reprap)</li>
-            <li>Deltaprintr</li>
-            <li>Monoprice 3D mini x 6 (loaners)</li>
-            <li>SeeMeCNC - ERIS delta</li>
+            <li><a href="http://www.flashforge-usa.com/flashforge-new-creator-pro-3d-printer/" target="_blank">[4x] FlashForge Creator Pro</a></li>
+            <li><a href="http://shop.prusa3d.com/en/3d-printers/59-original-prusa-i3-mk2-kit.html" target="_blank">[4x] Official Prusa i3 MK2</a></li>
+        </ul>
+        <h3>LTS Rentable</h3>
+        <ul>
+            <li><a href="http://www.monoprice.com/product?c_id=107&cp_id=10724&cs_id=1072403&p_id=15365" target="_blank">[6x] MP Mini Select</a></li>
+            <li><a href="https://www.seemecnc.com/products/eris-desktop-3d-printer" target="_blank">SeeMeCNC Eris Delta</a></li>
+            <li><a href="https://printm3d.com/themicro/" target="_blank">[3x] M3D mini (Blue, Green, Orange)</a></li>
+        </ul>
+        <h3>LTS Special Use Case</h3>
+        <ul>
+            <li><a href="https://www.zcorp.com/Z-Corp/ZPrinters-150-and-250-Online-Press-Kit/spage.aspx?version=0&language_id=1" target="_blank">Z-corp ZPrinter 250</a></li>
+            <li><a href="http://www.pancakebot.com" target="_blank">PancakeBot</a></li>
+            <li><a href="http://www.muve3d.net/press/product/muve-1-laser/" target="_blank">[2x] mUVe SLA printers (one laser, one DLP)</a></li>
+            <li><a href="https://formlabs.com/3d-printers/form-1-plus/" target="_blank">[2x] FormLabs Form1 SLA</a></li>
+            <li><a href="http://bukito3d.com/" target="_blank">DeezMaker Bukito</a></li>
+            <li><a href="https://printrbot.com/shop/assembled-simple-metal-with-heated-bed/" target="_blank">Printrbot (paste extruder modification)</a></li>
+            <li><a href="http://deltaprintr.com/" target="_blank">Deltaprintr</a></li>
+            <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">Wanhao Prussia i3</a></li>
         </ul>
     </div>
     <div class="pure-u-1 pure-u-lg-1-3">
         <h3>Deis3D Owned</h3>
         <ul>
-            <li>MakerBot Rep2 x 11 (Aleph and Omega + 9 from Yale)</li>
-            <li>Makerbot Rep2x</li>
-            <li>LeapFrog XL (24-inch build height)</li>
-            <li>Type A Machines, Series 1 (12x12x12-inch build volume)</li>
-            <li>DeltaMaker</li>
-            <li>DeltaPrintr</li>
-            <li>MakerGear M2</li>
-            <li>Ultimaker 2</li>
-            <li>FormLabs Form1 SLA</li>
-            <li>RoVa 5</li>
-            <li>Builder (2 filament mixing)</li>
-            <li>Builder Premium Small</li>
-            <li>BQ Whitbox with Diamond Hotend (3 filament mixing)</li>
-            <li>Rostock Max (unbuilt kit)</li>
-            <li>Prussia i3 x2</li>
-            <li>Fold-a-Rap</li>
-            <li>Lulzbot Taz 5</li>
-            <li>FusionTech ideaPrinter F100L (22.6-inch build height)</li>
-            <li>Morgan Pro</li>
-            <li>WASP 20x40 Turbo</li>
-            <li>WITBOX</li>
-        </ul>
-    </div>
-    <div class="pure-u-1 pure-u-lg-1-3">
-        <h3>Community Printers</h3>
-        <ul>
-            <li>Z-corp 250 (BinderJet 64 color)</li>
+            <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">[11x] MakerBot Rep2</a></li>
+            <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">MakerBot Rep2x</a></li>
+            <li><a href="https://www.lpfrg.com" target="_blank">LeapFrog Creatr XL</a></li>
+            <li><a href="https://www.typeamachines.com" target="_blank">Type A Machines Series 1</a></li>
+            <li><a href="https://www.deltamaker.com/products/deltamaker-delta-robot-3d-printer" target="_blank">DeltaMaker</a></li>
+            <li><a href="http://deltaprintr.com" target="_blank">DeltaPrintr</a></li>
+            <li><a href="https://ultimaker.com" target="_blank">MakerGear M2</a></li>
+            <li><a href="https://ultimaker.com" target="_blank">Ultimaker 2</a></li>
+            <li><a href="http://www.ordsolutions.com/rova3d-5-extruder-3d-printer/" target="_blank">ORD Solutions RoVa 5</a></li>
+            <li><a href="http://builder3dprinters.com/products/builder-dual-feed-overview/" target="_blank">Builder</a></li>
+            <li><a href="https://www.bq.com/en/3d-world" target="_blank">BQ Witbox</a></li>
+            <li><a href="https://www.seemecnc.com/collections/3d-printers/products/rostock-max-complete-kit?variant=373404417" target="_blank">SeeMeCNC Rostock Max V2</a></li>
+            <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">[2x] Prusa i3</a></li>
+            <li><a href="http://reprap.org/wiki/FoldaRap" target="_blank">FoldaRap</a></li>
+            <li><a href="https://www.lulzbot.com/store/printers/lulzbot-taz-5" target="_blank">Lulzbot Taz 5</a></li>
+            <li><a href="http://www.ideaprinter-usa.com" target="_blank">FusionTech ideaPrinter F100L</a></li>
+            <li><a href="http://www.morgan3dp.com" target="_blank">Morgan Pro</a></li>
+            <li><a href="http://www.wasproject.it/w/en/" target="_blank">WASP DeltaWASP 20 40 Turbo</a></li>
         </ul>
     </div>
 </div>
@@ -62,68 +58,167 @@ title:  "Resources"
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1 pure-u-lg-1-3">
-        <h2>Circuits</h2>
-        <ul>
-            <li>4x Soldering kits</li>
-            <li>adjustable iron</li>
-            <li>iron stand</li>
-            <li>solder sucker</li>
-            <li>solder wick</li>
-            <li>ESD mat</li>
-            <li>rosin core lead free solder</li>
-            <li>2x bench power supplies</li>
-            <li>soldering practice kits</li>
-            <li>breadboards</li>
-            <li>protoboards</li>
-            <li>flux paste</li>
-            <li>flux syringe</li>
-            <li>circuit cleaning equipment</li>
-            <li>kimwipes, alcohol, acid brushes</li>
-        </ul>
+    <div class="pure-u-1-4">
+        <h2 class="resources-title" id="vr-ar">VR Headsets (HMDs)</h2>
     </div>
-    <div class="pure-u-1 pure-u-lg-1-3">
-        <h2>3D Scanning</h2>
-        <ul>
-            <li>Xbox 360 Kinect x 2</li>
-            <li>Xbox One Kinect x 4</li>
-            <li>Next Engine Desktop 3D Scanner</li>
-            <li>David 3D Scanner</li>
-        </ul>
-        <h2>Embedded Systems</h2>
-        <ul>
-            <li>Raspberry Pi 2 B+ x 4</li>
-            <li>Raspbery Pi B+ x 2</li>
-            <li>Raspberry Pi B w/ Camera x 4</li>
-            <li>Arduino Uno x 2</li>
-            <li>Arduino Mega x 2</li>
-            <li>Gameduino</li>
-            <li>MBED boards</li>
-            <li>Beaglebone Black</li>
-            <li>Paralella board</li>
-            <li>Many many sensors and shields</li>
-        </ul>
+    <div class="pure-u-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-lg-1-3 border-left">
+                <h3>LTS Special Use Case</h3>
+                    <ul>
+                        <li><a href="http://store.steampowered.com/app/358040/">HTC vive</a></li>
+                        <li><a href="https://www3.oculus.com/en-us/rift/">Oculus Rift</a></li>
+                        <li><a href="https://www.amazon.com/Oculus-Rift-Developers-Kit-Dk2/dp/B00F5CWD0I">Oculus DK2</a></li>
+                        <li><a href="https://www.microsoft.com/microsoft-hololens/en-us">[2x] Microsoft Hololens</a></li>
+                        <li><a href="https://www3.oculus.com/en-us/gear-vr/">[2x] Samsung Gear VR</a></li>
+                    </ul>
+                </div>
+                <div class="pure-u-1 pure-u-lg-1-3">
+                    <h3>LTS Rentable</h3>
+                        <ul>
+                            <li><a href="https://vrkix.com/">[12x] HIgh end google cardboard</a></li>
+                            <li><a href="http://www.osvr.org/">[3x] OSVR Hacker Development Kit</a></li>
+                        </ul>
+                </div>
+                <div class="pure-u-1 pure-u-lg-1-3">
+                    <h3>VR club owned</h3>
+                        <ul>
+                            <li><a href="http://store.steampowered.com/app/358040/">[2x] HTC vive</a></li>
+                            <li><a href="https://www3.oculus.com/en-us/rift/">[3x] Oculus Rift</a></li>
+                        </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="pure-u-1 pure-u-lg-1-3">
-        <h2>Virtual Reality</h2>
-        <ul>
-            <li>Custom Built watercooled high end PC (6-corei7/32GB/Geforce 990TI)</li>
-            <li>3x custom PCs in Farber Innovation Classroom</li>
-            <li>2x custom PCs belonging to Deis3D</li>
-            <li>Oculus Rift DK2 w/ Leap Motion x 2</li>
-            <li>Google cardboard x 5</li>
-            <li>Muse Headband x 3</li>
-            <li>Myo Gesture Armband</li>
-        </ul>
-        <h2>Other Hardware</h2>
-        <ul>
-            <li>27" iMac (Corei7 / 16GB)</li>
-            <li>24" all-in-one Dell (Corei7 / 16GB) x 2</li>
-            <li>5 foot pull-down Projection Screen</li>
-            <li>55" Ideium Touch Table w/Win8</li>
-            <li>Leap Motion gesture controllers x 2</li>
-            <li>Fillabot 3D printer filament Reclaimer and Extruder/Recycler</li>
-            <li>Google Cardboard</li>
-        </ul>
+</div>
+
+<hr>
+
+<div class="pure-g">
+    <div class="pure-u-1-4">
+        <h2 class="resources-title">Custom PCs</h2>
+    </div>
+    <div class="pure-u-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-lg-1-3 border-left">
+                <h3>LTS owned in the MakerLab</h3>
+                <ul>
+                    <li>Geforce 980/ i7/32gb/500SSD</li>
+                </ul>
+                <h3>LTS owned in Farber 101 Innovation Classroom</h3>
+                <ul>
+                    <li>[3x] Custom PCs (TitanX / i7/32gb/500SSD)</li>
+                </ul>
+            </div>
+            <div class="pure-u-1 pure-u-lg-1-3">
+                <h3>Digital Humanities Lab owned</h3>
+                <ul>
+                    <li>Custom PC (Geforce 1080 / i7/32gb/500SSD)</li>
+                </ul>
+            </div>
+            <div class="pure-u-1 pure-u-lg-1-3">
+                <h3>Deis3D owned</h3>
+                <ul>
+                    <li>[3x] Custom PCs (TitanX / i7/32gb/500SSD)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
+    <div class="pure-u-1-4">
+        <h2 class="resources-title" id="embedded-systems">Embedded Systems</h2>
+    </div>
+    <div class="pure-u-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1-2 border-left">
+                <h3>LTS Special Use Case</h3>
+                <ul>
+                    <li><a href="https://www.pi-top.com/product/pi-top">Pi top</a></li>
+                    <li><a href="http://excamera.com/sphinx/gameduino/">Gameduino</a></li>
+                    <li><a href="https://developer.mbed.org/platforms/">Mbed boards</a></li>
+                    <li><a href="https://beagleboard.org/black">Beaglebone black</a></li>
+                    <li><a href="https://www.parallella.org/">Parallela</a></li>
+                    <li>Aerial Photography Drones - Must have FAA 107 licensing</li>
+                    <li>Custom built racing Drones</li>
+                    <li>[4x] Soldering kits</li>
+                    <li>adjustable iron</li>
+                    <li>iron stand</li>
+                    <li>solder sucker</li>
+                    <li>solder wick</li>
+                    <li>ESD mat</li>
+                    <li>rosin core lead free solder</li>
+                    <li><a href="https://www.amazon.com/gp/product/B0085QLNFM/ref=oh_aui_search_detailpage?ie=UTF8&psc=1">[2x] bench power supplies</a></li>
+                    <li><a href="http://www.choosemuse.com/">[2x] Muse Headbands</a></li>
+
+                    <li><a href="https://www.myo.com/">Myo Gesture armband</a></li>
+
+                    <li><a href="https://www.leapmotion.com/">[4x] Leap motion</a></li>
+                </ul>
+            </div>
+            <div class="pure-u-1-2">
+                <h3>LTS Rentable</h3>
+                <ul>
+                    <li><a href="https://www.raspberrypi.org/">Various Raspberry Pi</a></li>
+                    <li><a href="https://www.arduino.cc/">Various arduino boards</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
+    <div class="pure-u-1-4">
+        <h2 class="resources-title" id="scanning">3D Scanning</h2>
+    </div>
+    <div class="pure-u-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1-2 border-left">
+                <h3>LTS Special Use Case</h3>
+                    <ul>
+                        <li><a href="https://www.artec3d.com/3d-scanner/artec-spider">Artec Spider</a></li>
+                        <li><a href="http://www8.hp.com/us/en/campaign/3Dscanner/overview.html">David HP 3D Structured Light Scanner Pro S2</a></li>
+                        <li><a href="http://www.nextengine.com/">NextEngine desktop 3D scanner</a></li>
+                        <li>Dslr or Aerial Photography platform for Photogrammetry</li>
+                        <li><a href="http://www.agisoft.com/">Agisoft Photoscan</a></li>
+                        <li><a href="https://pix4d.com/">Pix4D</a></li>
+                        <li><a href="http://skanect.occipital.com/">[2x] Xbox kinect 360 with Skanect</a></li>
+                        <li><a href="http://skanect.occipital.com/">[2x] Xbox kinect one</a></li>
+                    </ul>
+            </div>
+            <div class="pure-u-1-2">
+                <h3>LTS Rentable</h3>
+                    <ul>
+                        <li><a href="http://skanect.occipital.com/">[4x] Xbox kinect 360 with Skanect</a></li>
+                    </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="pure-g">
+    <div class="pure-u-1-4">
+        <h2 class="resources-title" id="fabrication">Other MakerLab Gear</h2>
+    </div>
+    <div class="pure-u-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1 border-left">
+                <ul>
+                    <li>27" iMac (Corei7 / 16GB)
+                    <li>[2x] 24" all-in-one Dell Desktop PC (Corei7 / 16GB)
+                    <li>5 foot pull-down Projection Screen
+                    <li><a href="http://ideum.com/touch-tables/pro/?id=55">55" Ideium Touch Table w/Win10</a></li>
+                    <li><a href="https://www.filabot.com/collections/filabot-core/products/filabot-original?variant=570433109">Fillabot 3D printer filament Reclaimer and Extruder/Recycler</a></li>
+                    <li><a href="https://www.filastruder.com/products/filastruder-kit">Fillistruder 3D printer filament Reclaimer and Extruder/Recycler</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
