--- a/training/index.html
+++ b/training/index.html
@@ -21,8 +21,8 @@ title:  "Training"
                 <td>Intro to 3D printing</td>
                 <td>Friday from 10am-12pm</td>
                 <td>
-                    <form method="LINK" action="https://calendly.com/brandeismakerlab/printing">
-                        <input TYPE="submit" value="Sign up">
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/printing" target="_blank">
+                        <input TYPE="submit" value="Sign up" class="tiny-button">
                     </form>
                 </td>
             </tr>
@@ -30,8 +30,8 @@ title:  "Training"
                 <td>Intro to 3D scanning</td>
                 <td>Thursday from 3pm-5pm</td>
                 <td>
-                    <form method="LINK" action="https://calendly.com/brandeismakerlab/scanning">
-                        <input TYPE="submit" value="Sign up">
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/scanning" target="_blank">
+                        <input TYPE="submit" value="Sign up" class="tiny-button">
                     </form>
                 </td>
             </tr>
@@ -39,8 +39,8 @@ title:  "Training"
                 <td>Soldering training</td>
                 <td>Monday from 2pm-4pm</td>
                 <td>
-                    <form method="LINK" action="https://calendly.com/brandeismakerlab/soldering">
-                        <input TYPE="submit" value="Sign up">
+                    <form method="LINK" action="https://calendly.com/brandeismakerlab/soldering" target="_blank">
+                        <input TYPE="submit" value="Sign up" class="tiny-button">
                     </form>
                 </td>
             </tr>
