--- a/workspaces/index.html
+++ b/workspaces/index.html
@@ -9,26 +9,28 @@ title:  "Workspaces"
 </div>
 <div class="pure-g">
     <div class="pure-u-1 pure-u-lg-1-2">
-        <div id="makerlabCarousel">
-            <div>
-                <img src="/assets/images/makerlab.jpg" class="pure-img"/>
-            </div>
-            <div>
-                <img src="/assets/images/makerlab1.png" class="pure-img"/>
-            </div>
-            <div>
-                <img src="/assets/images/makerlab2.png" class="pure-img"/>
-            </div>
-            <div>
-                <img src="/assets/images/makerlab3.png" class="pure-img"/>
-            </div>
-            <div>
-                <img src="/assets/images/makerlab4.png" class="pure-img"/>
+        <div class="carouselWrapper">
+            <div id="makerlabCarousel">
+                <div>
+                    <img src="/assets/images/makerlab.jpg" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/makerlab1.png" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/makerlab2.png" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/makerlab3.png" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/makerlab4.png" class="pure-img"/>
+                </div>
             </div>
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
-        <p>Unlike other makerspaces, the Brandeis MakerLab is organized around a social justice vision that emphasizes broad access to innovation expertise and technologies as well as the positive impact that innovation can make in the world.  The MakerLab enjoys very broad involvement from the Brandeis community, including students, faculty researchers, and staff members.  Also particularly notable is the MakerLab’s vibrant and effective culture of tinkering and beta-testing that enables rapid and effective innovation.  This approach has captured the imagination of a growing cohort of faculty members, who are enhancing their courses by integrating maker elements in consultation with expert LTS staff.  Every day, members of the expanding Brandeis maker community pursue technology projects that develop new forms of culture and craft in a collaborative setting.
+        <p>Unique among makerspaces, the Brandeis MakerLab is organized around a social justice vision that emphasizes broad access to innovation expertise and technologies as well as the positive impact that innovation can make in the world.  The MakerLab enjoys very broad involvement from the Brandeis community, including students, faculty researchers, and staff members.  Also particularly notable is the MakerLab’s vibrant and effective culture of tinkering and beta-testing that enables rapid and effective innovation.  This approach has captured the imagination of a growing cohort of faculty members, who are enhancing their courses by integrating maker elements in consultation with expert LTS staff.  Every day, members of the expanding Brandeis maker community pursue technology projects that develop new forms of culture and craft in a collaborative setting.
         </p>
     </div>
 </div>
@@ -39,8 +41,11 @@ title:  "Workspaces"
 </div>
 <div class="pure-g">
     <div class="pure-u-1 pure-u-lg-1-2">
-        <div id="humanitiesCarousel">
-            <div><center><img src="/assets/images/digital-humanities-lab.jpeg"/ class="pure-img"></center></div>
+        <div class="carouselWrapper">
+
+            <div id="humanitiesCarousel">
+                <div><center><img src="/assets/images/digital-humanities-lab.jpeg"/ class="pure-img"></center></div>
+            </div>
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
@@ -55,8 +60,10 @@ title:  "Workspaces"
 </div>
 <div class="pure-g">
     <div class="pure-u-1 pure-u-lg-1-2">
-        <div id="farberCarousel">
-            <div><center><img src="/assets/images/farber.jpg" class="pure-img"/></center></div>
+        <div class="carouselWrapper">
+            <div id="farberCarousel">
+                <div><center><img src="/assets/images/farber.jpg" class="pure-img"/></center></div>
+            </div>
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
