ALmost ready for initial release

--- a/people/index.html
+++ b/people/index.html
@@ -257,10 +257,10 @@ title:  "People and Groups"
     </div>
 </div>
 
-<hr>
+<!-- <hr>
 
 <div class="pure-g">
     <div class="pure-u-1">
         <h2>Community</h2>
     </div>
-</div>
+</div> -->
