--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@ title: ""
 				</p>
 			<div class="pure-g">
 				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="mailto:makerlab@brandeis.edu">Join a club</a></h3>
+					<h3><a href="/people">Join a club</a></h3>
 				</div>
 				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="mailto:makerlab@brandeis.edu">Become a Maker in Residence</a></h3>
+					<h3><a href="/mir">Become a Maker in Residence</a></h3>
 				</div>
 				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="mailto:makerlab@brandeis.edu">Use the lab for individual research and projects</a></h3>
+					<h3><a href="/resources">Use the lab for individual research and projects</a></h3>
 				</div>
 				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="mailto:makerlab@brandeis.edu">Go to events</a></h3>
+					<h3><a href="/news">Go to events</a></h3>
 				</div>
 				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Research and coursework</a></h3>
