--- a/workspaces/index.html
+++ b/workspaces/index.html
@@ -30,7 +30,7 @@ title:  "Workspaces"
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
-        <p>The Digital Humanities Lab brings together students and faculty to pursue humanistic research questions through digital tools, methods, and practices. Current endeavors include undergraduate work on the <a href="http://www.homermultitext.org/" target="_blank">Homer Multitext Project</a> and support for the digitization efforts of the <a target="_blank" href="http://www.brandeis.edu/departments/classics/clarc/Classical"> Artifact Research Collection</a> interns. The DH Lab is also home to the <a target="_blank" href="https://moulianaproject.org/">Mouliana Project</a> which is seeking to employ the best technological and scientific methods to the practice and teaching of archaeology. Individuals or groups with ideas for projects or that are looking for digital resources are welcome to stop by or email.
+        <p>Unlike other makerspaces, the Brandeis MakerLab is organized around a social justice vision that emphasizes broad access to innovation expertise and technologies as well as the positive impact that innovation can make in the world.  The MakerLab enjoys very broad involvement from the Brandeis community, including students, faculty researchers, and staff members.  Also particularly notable is the MakerLab’s vibrant and effective culture of tinkering and beta-testing that enables rapid and effective innovation.  This approach has captured the imagination of a growing cohort of faculty members, who are enhancing their courses by integrating maker elements in consultation with expert LTS staff.  Every day, members of the expanding Brandeis maker community pursue technology projects that develop new forms of culture and craft in a collaborative setting.
         </p>
     </div>
 </div>
@@ -42,14 +42,21 @@ title:  "Workspaces"
 <div class="pure-g">
     <div class="pure-u-1 pure-u-lg-1-2">
         <div class="carouselWrapper">
-
             <div id="humanitiesCarousel">
-                <div><center><img src="/assets/images/digital-humanities-lab.jpeg"/ class="pure-img"></center></div>
+                <div>
+                    <img src="/assets/images/dh-1-copy.jpg" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/dh-2-copy.jpg" class="pure-img"/>
+                </div>
+                <div>
+                    <img src="/assets/images/dh-3-copy.jpg" class="pure-img"/>
+                </div>
             </div>
         </div>
     </div>
     <div class="pure-u-1 pure-u-lg-1-2">
-        <p>The Digital Humanities Lab brings together students and faculty to pursue humanistic research questions through digital tools, methods, and practices.</p>
+        <p>The Digital Humanities Lab brings together students and faculty to pursue humanistic research questions through digital tools, methods, and practices. Current endeavors include undergraduate work on the <a href="http://www.homermultitext.org/" target="_blank">Homer Multitext Project</a> and support for the digitization efforts of the <a target="_blank" href="http://www.brandeis.edu/departments/classics/clarc/Classical"> Artifact Research Collection</a> interns. The DH Lab is also home to the <a target="_blank" href="https://moulianaproject.org/">Mouliana Project</a> which is seeking to employ the best technological and scientific methods to the practice and teaching of archaeology. Individuals or groups with ideas for projects or that are looking for digital resources are welcome to stop by or email.</p>
     </div>
 </div>
 
